--- a/meu site/index.html
+++ b/meu site/index.html
@@ -1,38 +1,96 @@
-<!-- https://www.adorocinema.com/filmes/numero-cinemas/  site inspiraçao -->
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-BR">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Curiosidades do Cinema</title>
     <link rel="stylesheet" href="style.css">
-    <title>cinema curiosidade</title>
+    <!-- Font Awesome para ícones -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
 </head>
 <body>
+
     <header>
         <div class="header_container">
-            <div class="col-50">
-                <img src="img/73312.png" alt="">
+            <div class="col-50 logo">
+                <img src="img/73312.png" alt="Logo do site">
             </div>
-            <div class="col-50">
-                <div class="header_container_link">
-                    <a href="https://www.facebook.com/?locale=pt_BR">
-                        <i class="fa-brands fa-facebook"></i>
-                    </a>
-                    <a href="https://github.com/">
-                        <i class="fa-brands fa-github"></i>
-                    </a>
-                </div>
-
+            <div class="col-50 header_container_link">
+                <a href="https://www.facebook.com/?locale=pt_BR" target="_blank">
+                    <i class="fa-brands fa-facebook"></i>
+                </a>
+                <a href="https://github.com/" target="_blank">
+                    <i class="fa-brands fa-github"></i>
+                </a>
             </div>
-
         </div>
-
-
     </header>
+
     <nav class="nav_container">
         <div class="nav_div">
-            <a href="">Cadastro</a>
+            <a href="#">Cadastro</a>
+            <a href="#">Filmes</a>
+            <a href="#">Contato</a>
         </div>
     </nav>
+
+    <main class="main_container">
+        <h2>Filmes Mais Importantes da História</h2>
+        <div class="card_container">
+            <div class="card">
+                <img src="img/the-godfather-macabra-poster-380x568-1.jpg ">
+                <h3>O Poderoso Chefão</h3>
+                <p>Um clássico do cinema sobre a máfia italiana e a luta pelo poder familiar.</p>
+            </div>
+            <div class="card">
+                <img src="img/featuredImage.png" alt="Filme 2">
+                <h3>Cidadão Kane</h3>
+                <p>Considerado o maior filme de todos os tempos por sua inovação cinematográfica.</p>
+            </div>
+            <div class="card">
+                <img src="img/206330.jpg" alt="Filme 3">
+                <h3>Pulp Fiction</h3>
+                <p>Uma narrativa não linear que marcou o cinema dos anos 90 com estilo único.</p>
+            </div>
+            <div class="card">
+                <img src="img/Forrest_Gump.webp" alt="Filme 4">
+                <h3>Forrest Gump</h3>
+                <p>A história emocionante de um homem simples em meio aos maiores eventos do século XX.</p>
+            </div>
+            <div class="card">
+                <img src="img/20122166.webp" alt="Filme 5">
+                <h3>Clube da Luta</h3>
+                <p>Uma crítica profunda ao consumismo moderno com reviravoltas intensas.</p>
+            </div>
+            <div class="card">
+                <img src="img/20122166.webp" alt="Filme 6">
+                <h3>Matrix (1999)</h3>
+                <p>Redefiniu os efeitos visuais (bullet time), misturou filosofia e ação, e teve impacto profundo na cultura digital.</p>
+            </div>
+            <div class="card">
+                <img src="img/20122166.webp" alt="Filme 7">
+                <h3>Casablanca (1942)</h3>
+                <p>Um clássico atemporal que combina romance, drama e guerra com personagens memoráveis e diálogos icônicos.</p>
+            </div>
+            <div class="card">
+                <img src="img/20122166.webp" alt="Filme 8">
+                <h3>Clube da Luta</h3>
+                <p>Uma crítica profunda ao consumismo moderno com reviravoltas intensas.</p>
+            </div>
+            <div class="card">
+                <img src="img/20122166.webp" alt="Filme 9">
+                <h3>Clube da Luta</h3>
+                <p>Uma crítica profunda ao consumismo moderno com reviravoltas intensas.</p>
+            </div>
+            <div class="card">
+                <img src="img/20122166.webp" alt="Filme 10">
+                <h3>Clube da Luta</h3>
+                <p>Uma crítica profunda ao consumismo moderno com reviravoltas intensas.</p>
+            </div>
+
+        </div>
+    </main>
+
 </body>
 </html>
