--- a/meu site/form.html
+++ b/meu site/form.html
@@ -42,7 +42,7 @@
             <label for="mensagem">Mensagem:</label>
             <textarea id="mensagem" name="mensagem" ></textarea>
 
-            <button type="submit">Enviar</button>
+            <button type="submit"><a href="index.html">enviar</a></button>
         </form>
     </div>
 
