--- a/meu site/index.html
+++ b/meu site/index.html
@@ -29,8 +29,8 @@
 
     <nav class="nav_container">
         <div class="nav_div">
-            <a href="#">Cadastro</a>
-            <a href="#">Filmes</a>
+            <a href="form.html">Cadastro</a>
+            <a href="index.html">home</a>
             <a href="#">Contato</a>
         </div>
     </nav>
@@ -64,29 +64,29 @@
                 <p>Uma crítica profunda ao consumismo moderno com reviravoltas intensas.</p>
             </div>
             <div class="card">
-                <img src="img/20122166.webp" alt="Filme 6">
+                <img src="img/The_Matrix.png" alt="Filme 6">
                 <h3>Matrix (1999)</h3>
                 <p>Redefiniu os efeitos visuais (bullet time), misturou filosofia e ação, e teve impacto profundo na cultura digital.</p>
             </div>
             <div class="card">
-                <img src="img/20122166.webp" alt="Filme 7">
+                <img src="img/CasablancaPoster-Gold.jpg"alt="Filme 7">
                 <h3>Casablanca (1942)</h3>
                 <p>Um clássico atemporal que combina romance, drama e guerra com personagens memoráveis e diálogos icônicos.</p>
             </div>
             <div class="card">
-                <img src="img/20122166.webp" alt="Filme 8">
-                <h3>Clube da Luta</h3>
-                <p>Uma crítica profunda ao consumismo moderno com reviravoltas intensas.</p>
+                <img src="img/e6ef63914bd059a94fa3ac2939023e18.webp" alt="Filme 8">
+                <h3>A Lista de Schindler</h3>
+                <p>Um dos retratos mais poderosos do Holocausto, com forte impacto emocional e histórico.</p>
             </div>
             <div class="card">
-                <img src="img/20122166.webp" alt="Filme 9">
-                <h3>Clube da Luta</h3>
-                <p>Uma crítica profunda ao consumismo moderno com reviravoltas intensas.</p>
+                <img src="img/CidadedeDeus.jpg" alt="Filme 9">
+                <h3>Cidade de Deus</h3>
+                <p>Marco do cinema brasileiro, reconhecido internacionalmente pela estética, ritmo e crítica social.</p>
             </div>
             <div class="card">
-                <img src="img/20122166.webp" alt="Filme 10">
-                <h3>Clube da Luta</h3>
-                <p>Uma crítica profunda ao consumismo moderno com reviravoltas intensas.</p>
+                <img src="img/MV5BYjk1Y2U4MjQtY2ZiNS00OWQyLWI3MmYtZWUwNmRjYWRiNWNhXkEyXkFqcGc@._V1_ (1).jpg">
+                <h3>Parasita</h3>
+                <p>Primeiro filme em língua estrangeira a vencer o Oscar de Melhor Filme, com crítica social afiada e direção excepcional.</p>
             </div>
 
         </div>
