--- a/meu site/index.html
+++ b/meu site/index.html
@@ -90,7 +90,18 @@
             </div>
 
         </div>
+
     </main>
+
+    <footer class="footer">
+        <p>&copy; 2025 <strong>Curiosidades do Cinema</strong>. Todos os direitos reservados.</p>
+        <p>Site desenvolvido por <strong>Davi Henrique Tristão da Silva</strong></p>
+        <p>
+            <a href="mailto:davi@email.com" style="color: #fff; text-decoration: underline;">Contato</a> |
+            <a href="https://www.linkedin.com/in/davi-tristao" target="_blank" style="color: #fff; text-decoration: underline;">LinkedIn</a> |
+            <a href="#topo" style="color: #fff; text-decoration: underline;">Voltar ao topo</a>
+        </p>
+    </footer>
 
 </body>
 </html>
