--- a/meu site/form.html
+++ b/meu site/form.html
@@ -25,7 +25,8 @@
 
     <nav class="nav_container">
         <div class="nav_div">
-            <a href="index.html">home</a>
+            <a href="form.html">Cadastro</a>
+            <a href="index.html">Home</a>
             <a href="#">Contato</a>
         </div>
     </nav>
@@ -46,6 +47,15 @@
         </form>
     </div>
 
+    <footer class="footer">
+        <p>&copy; 2025 <strong>Curiosidades do Cinema</strong>. Todos os direitos reservados.</p>
+        <p>Site desenvolvido por <strong>Davi Henrique Tristão da Silva</strong></p>
+        <p>
+            <a href="mailto:davi@email.com" style="color: #fff; text-decoration: underline;">Contato</a> |
+            <a href="https://www.linkedin.com/in/davi-tristao" target="_blank" style="color: #fff; text-decoration: underline;">LinkedIn</a> |
+            <a href="#topo" style="color: #fff; text-decoration: underline;">Voltar ao topo</a>
+        </p>
+    </footer>
 
 </body>
 </html>
